--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>org.petrenko.task.manager.App</mainClass>
+              <mainClass>org.testing.App</mainClass>
               <classpathPrefix>dependency-jars/</classpathPrefix>
             </manifest>
           </archive>
